updating file names
Changing name on index.html

--- a/trainr-workout.html
+++ b/trainr-workout.html
@@ -16,7 +16,7 @@
     <header class="container">
         <div class="row">
             <div class="col-md-3">
-                <a  href="trainr-home.html" style="color: white;"><h1 class="col-sm-12" style="cursor:pointer"> TRAINR </h1></a>
+                <a  href="index.html" style="color: white;"><h1 class="col-sm-12" style="cursor:pointer"> TRAINR </h1></a>
             </div>
         </div>
     </header>
@@ -31,7 +31,7 @@
     </div>
 
     <footer>
-        <p>made by <a href="http://robad.me/">roba.d</a></p>
+        <p>made by <a href="http://robad.me/">roba d</a></p>
     </footer>
 
 </body>
